--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "^3.2.0",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
+    "dotenv": "^4.0.0",
     "es6-promise": "^4.2.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
