--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.2.0",
+    "axios": "^0.17.1",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
     "dotenv": "^4.0.0",
     "es6-promise": "^4.2.2",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
