--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 
 .env
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
