--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "name": "moofie-app",
+  "engines": {
+    "node": "9.5.0"
+  },
+  "scripts": {
+    "build": "npm install && npm run build",
+    "deploy": "cp -a client/build/. public/",
+    "clientbuild": "npm run build && npm run deploy && echo 'Client built!'"
+  },
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.2.0",
@@ -13,9 +21,11 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-css-transition": "^0.7.4",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "1.x",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
